--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
 
 /* Your CSS Code here. */
-.blockquote{
-	max-width: 600px
-	margin: 10px
-	padding: 15px
-	border-left: 8px solid and in green color
-	font-weight:Bold
+blockquote{
+	max-width: 600px;
+	margin: 10px;
+	padding: 15px;
+	border-left: 8px solid green;
+	font-weight:bold;
 }
